style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --primary-dark: #1d1d1d;
  --primary-gray: #eaeae8;
  --primary-white: #ffffff;
  --label-green: #d9d6b0;
  --label-pink: #d4b0d9;
  --font-family: "Inter", sans-serif;
  --font-size-base: 16px;

  --swiper-scrollbar-border-radius: 0;
  /* --swiper-scrollbar-left: 0; */
  --swiper-scrollbar-bg-color: var(--primary-gray);
  --swiper-scrollbar-size: 1px;
}

html {
  font-size: var(--font-size-base);
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: 500;
  color: var(--primary-dark);
  text-transform: uppercase;
  padding: 0 16px;
}

a {
  text-decoration: none;
  color: inherit;
}

.large {
  font-size: var(--font-size-base);
  text-transform: initial;
  font-weight: 600;
}

h1 {
  font-size: 2rem;
  text-transform: initial;
}

button {
  background-color: var(--primary-white);
  border: none;
  font-size: var(--font-size-base);
  text-transform: uppercase;
  font-family: var(--font-family);
  cursor: pointer;
}

.active {
  display: block !important;
}

.hide-mobile {
  display: none;
}

.card {
  width: 100%;
  height: 300px;
  background-color: var(--primary-gray);
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 16px;
}

.heart {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
}

.tag {
  position: absolute;
  top: 16px;
  left: 16px;
  padding: 4px 12px;
  border-radius: 100px;
}

.tag--bestseller {
  background-color: var(--label-green);
}

.tag--limited-edition {
  background-color: var(--label-pink);
}

.card__text {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding: 24px 12px 0 12px;
}

/* HEADER  */
.navbar {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background: var(--primary-white);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 24px 16px;
  z-index: 999999999999999999999999999;
}

.navbar__logo {
  display: flex;
  align-items: center;
  gap: 12px;
}

.navbar__hamburger {
  display: flex;
  align-items: center;
  gap: 8px;
}

.navbar__list {
  display: flex;
  flex-direction: row;
  align-items: center;
  list-style: none;
  gap: 24px;
}

.navbar__list,
.mobile-nav-logo,
.sidebar,
.menu-overlay {
  display: none;
}

.sidebar {
  position: fixed;
  width: 80vw;
  height: 100vh;
  top: 0;
  right: 0;
  background-color: var(--primary-white);
  padding: 0 18px 0 32px;
  font-size: 1.2rem;
  display: none;
  z-index: 9999999;

  animation: slideFromRight 1s;
}

.menu-overlay {
  animation: opacity 0.8s;
}

.sidebar__head {
  width: 100%;
  padding: 24px 0;
  margin-bottom: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.sidebar__list {
  padding: 80px 0 0 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.sidebar__button {
  background-color: transparent;
  display: flex;
  align-items: center;
  gap: 8px;
}

.menu-overlay {
  position: fixed;
  inset: 0;
  background: rgba(29, 29, 29, 0.502);
  z-index: 9998;
}

.home {
  width: 100%;
  height: calc(100vh);
  padding: 136px 0 0 0;
  display: flex;
  flex-direction: column;
}

.home__logo {
  width: auto;
  height: 50px;
  background-image: url("/assets/images/logo_small.png");
  background-repeat: no-repeat;
  background-size: auto;
  margin: 0 0 24px 0;
}

.home__hero {
  width: 100%;
  height: auto;
  min-height: 200px;
  flex: 1;
  object-fit: cover;
  border-radius: 8px;
}

/* FEATURED PRODUCTS SECTION */
.featured {
  padding: 36px 0 32px 0;
}

.featured h1 {
  padding: 4px 0 32px 0;
}

.swiper {
  width: 100%;
  height: 413px;
}

.swiper-slide {
  width: 95% !important;
  max-width: 300px;
}

.card__img {
  width: 100%;
  height: 100%;
}

.swiper-scrollbar {
  width: 100% !important;
  left: 0 !important;
}

.swiper-scrollbar-drag {
  background-color: var(--primary-dark) !important;
  border-radius: 0 !important;
}

.swiper-button-disabled {
  display: none !important;
}

.btn-next,
.btn-prev {
  background-image: url("/assets/icons/arrow_right.svg");
  position: absolute;
  top: 158px;
  background-position: center;
  background-repeat: no-repeat;
  width: 64px;
  height: 64px;
  background-color: var(--primary-white);
  border-radius: 100%;
  border: 1px solid var(--primary-gray);
  z-index: 99;
  cursor: pointer;
}
.btn-next {
  right: 0;
}

.btn-prev {
  left: 0;
  rotate: -180deg;
}
/* END FEATURED PRODUCTS SECTION */

/* PRODUCT LISTING SECTION */
.products-list {
  padding: 24px 0 64px 0;
}
.products-list form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  padding: 0 0 32px 0;
}
.products-list form select {
  border: none;
  font-size: 1rem;
  font-weight: 700;
}
.products__grid {
  display: grid;
  grid-auto-rows: 158px;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 12px;
}
.product {
  min-width: 158px;
  height: 158px;
  position: relative;
  background-color: var(--primary-gray);
  border-radius: 6px;
  cursor: pointer;
}

.product__id {
  position: absolute;
  top: 8px;
  left: 8px;
  font-size: 0.4rem;
}
.product__img {
  width: 100%;
  height: 100%;
  padding: 8px;
  object-fit: contain;
}
.banner {
  grid-column: 1 / span 2;
  grid-row: 3 / span 3;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 32px 24px;
  border-radius: 6px;
  background-image: url("/assets/images/banner.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
.banner__logo {
  text-align: center;
  padding: 0 0 2px 0;
}
.banner__text {
  font-size: 2rem;
  font-weight: 700;
  text-transform: initial;
  text-align: center;
}

.banner button {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 13px 56px;
  background-color: var(--primary-white);
  border-radius: 6px;
  font-weight: 500;
}
/* END PRODUCT LISTING SECTION */

.modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #1d1d1d80;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 9999999999999999;
  animation: opacity 1s;
}

.modal__content {
  width: 86vw;
  height: 420px;
  position: relative;
  background: var(--primary-gray);
  padding: 16px;
  border-radius: 6px;
}

.modal__content p {
  position: absolute;
  top: 19px;
  left: 16px;
}

.modal__content img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.modal__close {
  position: absolute;
  top: 16px;
  right: 16px;
  background: transparent;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 8px;
}

.hidden {
  display: none;
}

/* ANIMATIONS  */
@keyframes slideFromRight {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes opacity {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* BREAKPOINTS */
@media (min-width: 600px) {
}

@media (min-width: 768px) {
}

@media (min-width: 991px) {
  body {
    padding: 0 42px;
  }
  .large {
    font-size: 1.25rem;
  }
  h1 {
    font-size: 2.625rem;
  }
  .hide-mobile {
    display: flex !important;
  }
  .navbar {
    display: flex;
    padding: 32px 42px;
  }
  .navbar__list {
    display: flex;
  }
  .navbar__user {
    gap: 12px;
  }
  .navbar__hamburger {
    display: none;
  }
  .home__logo {
    height: 138px;
    background-image: url("/assets/images/logo.png");
    margin: 0 0 42px 0;
  }
  .home {
    height: calc(100vh);
    padding: 168px 0 0 0;
  }
  .navbar__list {
    flex-direction: row;
    gap: 15px;
  }
  .navbar__list a:hover {
    border-bottom: 2px solid var(--primary-dark);
  }
  .navbar__links {
    display: flex;
    align-items: center;
    gap: 15px;
  }
  .card {
    width: 441px;
    height: 441px;
    padding: 32px;
  }
  .swiper {
    height: 589px;
  }
  .swiper-slide {
    /* width: 100% !important; */
    max-width: 441px;
  }
  .btn-next {
    right: 32px;
  }

  .btn-prev {
    left: 32px;
  }
  .btn-next,
  .btn-prev {
    width: 72px;
    height: 72px;
    top: 216px;
  }
  .products__grid {
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 24px;
  }
  .products-list {
    padding: 42px 0;
  }
  .products-list form {
    flex-direction: row;
    justify-content: center;
    gap: 36px;
    padding: 0 0 65px 0;
  }

  .products__grid {
    display: grid;
    grid-auto-rows: 350px;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 16px;
  }
  .product {
    max-width: 441px;
    height: 350px;
  }
  .product__id {
    top: 32px;
    left: 32px;
    font-size: 1rem;
  }
  .product__img {
    padding: 32px;
  }
  .banner {
    grid-column: 2 / span 2;
    grid-row: 2 / span 1;
    padding: 32px 50px;
  }
  .banner__text {
    font-size: 2rem;
  }
  .modal__content {
    width: 840px;
    height: 620px;
    padding: 32px;
  }
  .featured {
    padding: 96px 0;
  }
  .featured h1 {
    padding: 4px 0 42px 0;
  }
  .product:hover,
  .swiper-slide:hover {
    opacity: 0.2;
  }
  .swiper-slide {
    cursor: pointer;
  }
}

@media (min-width: 1024px) {
  .navbar__list {
    gap: 42px;
  }
  .navbar__links {
    gap: 32px;
  }
}

@media (min-width: 1280px) {
  .banner__text {
    font-size: 3rem;
  }
  .products__grid {
    grid-auto-rows: 441px;
  }
  .product {
    height: 441px;
  }
  .products__grid {
    grid-gap: 24px;
  }
  .banner {
    padding: 32px 96px;
  }
}

@media (min-width: 1440px) {
}

